Add submodules, remove love

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
       "type": "shell",
       "options": {"cwd": "${workspaceFolder}"},
       "command": ".vscode/tasks/default.sh",
-      "args": ["${file}"],
+      "args": [],
       "group": {"kind": "build", "isDefault": true}
     }
   ]
